<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.meuplacar.MainActivity">

    <Button
        android:id="@+id/buttonJogadorUm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50sp"
        android:text="@string/btnJogadorUm"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tvContadorUm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/tvContadorUm"
        android:textSize="70sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvVersus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/tvVersus"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvContadorDois"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:gravity="center"
        android:text="@string/tvContadorDois"
        android:textSize="70sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonJogadorDois"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:text="@string/btnJogadorDois"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonEncerrarPartida"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnEncerrarPartida"
            android:textAlignment="center" />

        <Button
            android:id="@+id/buttonZerarPlacar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnZerarPlacar"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>